force-app/main/default/objects/Discount_Code__c/Discount_Code__c.object-meta.xml
<CustomObject>
    <description>Discount codes used during ticket purchase — maps to a Campaign for attribution</description>
    <label>Discount Code</label>
    <nameField>
        <label>Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>