force-app/main/default/objects/Discount_Code__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive codes cannot be used at checkout</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>