force-app/main/default/objects/Discount_Code__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Discount Codes</relationshipLabel>
    <relationshipName>Discount_Codes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>